[gd_scene load_steps=2 format=3 uid="uid://game_lobby"]

[ext_resource type="Script" path="res://scripts/GameLobby.gd" id="1"]

[node name="GameLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Lobby"
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="GameButtons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="LudoButton" type="Button" parent="VBox/GameButtons"]
layout_mode = 2
text = "Play Ludo"

[node name="SnakesButton" type="Button" parent="VBox/GameButtons"]
layout_mode = 2
text = "Play Snakes"

[node name="TTTButton" type="Button" parent="VBox/GameButtons"]
layout_mode = 2
text = "Play Tic-Tac-Toe"

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Leave Lobby"

[connection signal="pressed" from="VBox/GameButtons/LudoButton" to="." method="_on_ludo_pressed"]
[connection signal="pressed" from="VBox/GameButtons/SnakesButton" to="." method="_on_snakes_pressed"]
[connection signal="pressed" from="VBox/GameButtons/TTTButton" to="." method="_on_ttt_pressed"]
[connection signal="pressed" from="VBox/BackButton" to="." method="_on_back_pressed"]
